...schooladmin, and student routes on swagger
