# swagger.yaml
@@ -378,6 +378,56 @@ paths:
         "405":
           description: "Invalid input"
 
+  /student/new_msg:
+    post:
+      tags:
+        - "Student"
+      summary: "Post a new message to a teacher in a class..."
+      description: "Request object can also have 'to' and 'from' fields with full names as strings"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Object required for route..."
+          required: true
+          schema:
+            type: "object"
+            properties:
+              studentid:
+                type: "integer"
+              teacherid:
+                type: "integer"
+              title:
+                type: "string"
+              message:
+                type: "boolean"
+      responses:
+        "405":
+          description: "Invalid input"
+
+  /student/get_msgs/{id}:
+    get:
+      tags:
+        - "Student"
+      summary: "Gets all messages for a student..."
+      description: ""
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "StudentID of (messages)records to return..."
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "405":
+          description: "Invalid input"
+
+
   /schooladmin/teacher/{id}:
     get:
       tags:
@@ -415,4 +465,87 @@ paths:
       responses:
         "405":
           description: "Invalid input"
+
+  /schooladmin/add_teacher:
+    post:
+      tags:
+        - "School Admin"
+      summary: "Adds a new teachers to a school..."
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Object required for route..."
+          required: true
+          schema:
+            type: "object"
+            properties:
+              schoolid:
+                type: "integer"
+              userid:
+                type: "integer"
+              firstname:
+                type: "string"
+              lastname:
+                type: "string"
+              datejoined:
+                type: "date"
+      responses:
+        "405":
+          description: "Invalid input"
+
+  /schooladmin/del_teacher/{id}:
+    delete:
+      tags:
+        - "School Admin"
+      summary: "Deletes a teacher from a school..."
+      description: ""
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "TeacherID on (teacher)records to delete..."
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "405":
+          description: "Invalid input" 
+
+  /schooladmin/update_teacher:
+    put:
+      tags:
+        - "School Admin"
+      summary: "Updates a teachers record..."
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Object required for route..."
+          required: true
+          schema:
+            type: "object"
+            properties:
+              schoolid:
+                type: "integer"
+              userid:
+                type: "integer"
+              firstname:
+                type: "string"
+              lastname:
+                type: "string"
+              datejoined:
+                type: "date"
+      responses:
+        "405":
+          description: "Invalid input"       
 
